--- a/Pages/index.html
+++ b/Pages/index.html
@@ -16,17 +16,17 @@
     <div id="pokemon">
         <div id="selection-1" class="selection">
             <img src="https://vignette.wikia.nocookie.net/pokemon/images/9/93/810Grookey.png/revision/latest?cb=20200627181002" alt="image of Grookey">
-            <h2></h2>
+            <h2> Grookey </h2>
         </div>
 
         <div id="selection-2" class="selection">
             <img src="https://cdn.bulbagarden.net/upload/thumb/b/b4/587Emolga.png/1200px-587Emolga.png" alt="image of Emolga">
-            <h2></h2>
+            <h2>Emolga</h2>
         </div>
 
         <div id="selection-3" class="selection">
             <img src="https://img.pokemondb.net/artwork/large/vulpix.jpg" alt="image of Volpix">
-            <h2></h2>
+            <h2> Volpix </h2>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
