--- a/Pages/selection.html
+++ b/Pages/selection.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
+    <h1>Battle!</h1>
+    <div id="battle-zone">
+        <div id="user-selection">
+            <img src="" alt="">
+            <h2></h2>
+        </div>
 
+        <div id="enemy-pokemon">
+            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/150.png" alt="Image of MewTwo">
+            <h2>MewTwo</h2>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="../js/selection.js"></script>
