fixed errors with selection page not showing content needed

--- a/Pages/selection.html
+++ b/Pages/selection.html
@@ -12,14 +12,14 @@
     <h1>Battle!</h1>
     <div id="battle-zone">
         <div id="userSelection">
-            <img src="" alt="Image of Pokemon that User selected">
-            <h2>User Selection</h2>
+            <div id="userImage"></div>
+            <h2 id="userPokemon"></h2>
             <h4 id="userHP">100/100</h4>
             <div id="attackButtons">
-                <button id="attackOne">Attack 1</button>
-                <button id="attackTwo">Attack 2</button>
-                <button id="attackThree">Attack 3</button>
-                <button id="attackFour">Attack 4</button>
+                <button onclick="attackOne()" id="attackOne">Attack 1</button>
+                <button onclick="attackTwo()" id="attackTwo">Attack 2</button>
+                <button onclick="attackThree()" id="attackThree">Attack 3</button>
+                <button onclick="attackFour()" id="attackFour">Attack 4</button>
             </div>
         </div>
 
