Added cookies for health tracker and injecting hp under each character

--- a/Pages/selection.html
+++ b/Pages/selection.html
@@ -14,7 +14,8 @@
         <div id="userSelection">
             <div id="userImage"></div>
             <h2 id="userPokemon"></h2>
-            <h4 id="userHP">100/100</h4>
+            <h4 id="userHP"></h4>
+            <div id="winLoseContainer"></div>
             <div id="attackButtons">
                 <button onclick="attackOne()" id="attackOne">Attack 1</button>
                 <button onclick="attackTwo()" id="attackTwo">Attack 2</button>
@@ -29,7 +30,7 @@
 
         <div id="enemy-pokemon">
             <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/150.png" alt="Image of MewTwo">
-            <h4 id="enemyHP">100/100</h4>
+            <h4 id="enemyHP"></h4>
             <h2>MewTwo</h2>
         </div>
     </div>
